# otus-ms-arhitecture

./: .env  Dockerfile  README.md  alembic.ini  docker-compose-db.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
homework-1/: OTUS.postman_collection.json  README.md
homework-2/: OTUS-2.postman_collection.json  README.md
k8s/manifest/: 1-deployment.yaml  2-ingress.yaml  app-config.yaml  initdb.yaml
k8s/manifest/app-chart/: Chart.yaml  values.yaml
k8s/manifest/app-chart/charts/: postgresql-11.6.20.tgz
k8s/manifest/app-chart/templates/: _helpers.tpl  config.yaml  deployment.yaml  ingress.yaml  service.yaml
k8s/manifest/statefulset/: postgres.yaml
otus-service/: main.py
otus_service/: constants.py  main.py
otus_service/models/: __init__.py  db_user.py  meta.py
otus_service/models/alembic/: env.py
otus_service/models/alembic/versions/: cc54ef1e059e_message.py
