[tool.poetry]
name = "otus-service"
version = "0.1.0"
description = ""
authors = ["Max Zakirov <maksim.zakirov@zyfra.com>"]
packages = [
    { include = "otus-service" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
