[tool.poetry]
name = "otus-service"
version = "0.1.0"
description = ""
authors = ["Max Zakirov <maksim.zakirov@zyfra.com>"]
packages = [
    { include = "otus-service" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.39"}
alembic = "^1.8.1"
asyncpg = "^0.26.0"
psycopg2-binary = "^2.9.3"
fastapi-crudrouter = "^0.8.5"
python-dotenv = "^0.20.0"
databases = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
